<resources>
    <string name="app_name">ToDo</string>
    <string name="fab" translatable="false">fab</string>
    <string name="main_channel_description">Main channel</string>
    <string name="login_label">login</string>
    <string name="prompt_password">pass</string>
    <string name="action_sign_in_short">pass</string>
    <string name="action_sign_in">Sing in</string>
    <string name="done_message">done</string>
    <string name="failed_message">failed</string>
    <string name="wait_for_initialize">wait initialize</string>
    <string name="wait_for_internet_message">wait internet connection</string>
    <string name="message_invalid_login_data">invalid login data</string>
    <string name="message_login_error">login error</string>
    <string name="message_empty_login_data">empty login</string>
    <string name="message_login_blocked">login blocked</string>
    <string name="message_login_timeout">login timeout</string>
    <string name="fill_name_title">Fill ticket name</string>
    <string name="set_body_title">Fill ticket body</string>
    <string name="add_photo_label">Add photo</string>
    <string name="add_file_label">Add file</string>
    <string name="wait_title">Please, wait</string>
    <string name="wait_message">I doing my job</string>
    <string name="myTickets">My tickets</string>
    <string name="incomingTickets">Incoming</string>
    <string name="outgoing_fragment_title">My tickets</string>
    <string name="incoming_fragment_title">Incoming</string>
    <string name="sort_message">Sorting</string>
    <string name="filter_message">Filter</string>
    <string name="loading_dialog_message">Loading, please, wait</string>
    <string name="dismiss_task_button">Cancel</string>
    <string name="call_initiator_message">Call initiator</string>
    <string name="required_period">Required period</string>
    <string name="not_actual_yet_message">Not actual yet</string>
    <string name="call_executor_message">Call executor</string>
    <string name="disable_dose_dialog_title">Disable Doze</string>
    <string name="disable_dose_dialog_message">For the best performance, please, disable Doze</string>
    <string name="finish_task_title">Finish task</string>
    <string name="finish_task_message">Really finish task?</string>
    <string name="dismiss_reason_message">dismiss reason</string>
    <string name="require_dissmiss_reason_message">dismiss reason required</string>
    <string name="incoming_task_title">Incoming task</string>
    <string name="my_task_title">My ticket</string>
    <string name="task_cancelled_message">Task cancelled</string>
    <string name="outgoing_task_context_label">Select The Action</string>
    <string name="call_executor_menu_item">Call executor</string>
    <string name="cancel_task_menu_item">cancel task</string>
    <string name="show_more_menu_item">Show more</string>
    <string name="call_initiator_menu_item">Call initiator</string>
    <string name="task_name_title">Task name</string>
    <string name="task_body_title">Task body</string>
    <string name="task_state_title">Task state</string>
    <string name="task_executor_title">Task executor</string>
    <string name="outgoing_task_title">Task</string>
    <string name="date_pattern">" yyyy in HH:mm"</string>
    <string name="task_created_title">Task created</string>
    <string name="executor_not_set_message">Not set</string>
    <string name="task_accepted_title">Task accepted</string>
    <string name="task_planned_finish_title">Planned finish</string>
    <string name="task_finished_title">Task finished</string>
    <string name="executor_comment_title">Executor comment</string>
    <string name="call_executor_title">Call executor</string>
    <string name="mail_executor_title">Mail executor</string>
    <string name="download_attached_photo_title">download attached photo</string>
    <string name="photo_added_message">Photo added!</string>
    <string name="zip_added_message">Zip added!</string>
    <string name="download_attached_file_title">Download attached file</string>
    <string name="task_initiator_title">Task initiator</string>
    <string name="accept_action_titile">Accept</string>
    <string name="how_many_time_you_need_for_complete_message">How many time you need for complete?</string>
    <string name="accept_task_title">Accept task</string>
    <string name="finish_task_request_titile">Really finish task?</string>
    <string name="processing_title">Processing</string>
    <string name="logout_menu_item">Logout</string>
    <string name="show_preferences_menu_item">Preferences</string>
    <string name="high_priority_channel_description">High priority</string>
    <string name="silent_channel_description">Silent channel</string>
    <string name="claim_menu_item">" Claim"</string>
    <string name="claim_text_here_message">claim text here</string>

</resources>